--- a/Masterarbeit 4/Tex/chapter1.tex
+++ b/Masterarbeit 4/Tex/chapter1.tex
@@ -10,11 +10,11 @@ Um Softwareprozessmodelle richtig anzuwenden, müssen diese auch verstanden werd
 
 
 
-Heutzutage existiert eine Vielzahl unterschiedlicher Prozessmodellierungssprachen. Über deren Vor- und Nachteile wird intensiv diskutiert. Hierbei werden auch sehr häufig die Vorzüge und Nachteile von imperativen und deklarativen Prozessmodellierungssprachen diskutiert \cite{fahland2009}. \newline
+Heutzutage existiert eine Vielzahl unterschiedlicher Prozessmodellierungssprachen. Über deren Vor- und Nachteile wird intensiv diskutiert. Hierbei werden auch sehr häufig die Vorzüge und Nachteile von imperativen und deklarativen Prozessmodellierungssprachen diskutiert \cite{fahland2010}. \newline
 
 Es existieren bereits Arbeiten und Studien, welche sich mit dem Vergleich von imperativen und deklarativen Prozessmodellierungssprachen beschäftigen. Jedoch gibt es noch kaum Arbeiten, welche sich intensiv mit dem Vergleich der Anwendbarkeit der beiden Prozessmodellierungssprachen bei der Modellierung beschäftigen.\newline
 
-Aus diesem Grund wird die Anwendbarkeit von imperativen und deklarativen Prozessmodellierungsansätzen in dieser Arbeit im Kontext von Softwareprozessmodellen eingehend untersucht. Hierfür werden Teile der Softwareprozessmodelle Scrum, Open UP und V-Modell XT sowohl in imperativer, als auch in deklarativer Prozessmodellierungssprache modelliert und anschließend wird deren Anwendbarkeit in diesem Kontext eingehend analysiert und diskutiert.\newline
+Aus diesem Grund wird die Anwendbarkeit von imperativen und deklarativen Prozessmodellierungsansätzen in dieser Arbeit im Kontext von Softwareprozessmodellen eingehend untersucht werden. Hierfür werden Teile der Softwareprozessmodelle Scrum, Open UP und V-Modell XT sowohl in imperativer als auch in deklarativer Prozessmodellierungssprache modelliert und anschließend wird deren Anwendbarkeit in diesem Kontext analysiert und diskutiert.\newline
 
 .
 
@@ -22,7 +22,7 @@ Aus diesem Grund wird die Anwendbarkeit von imperativen und deklarativen Prozess
 \section{Zielstellung}
 Die vorliegende Arbeit verfolgt mehrere Ziele. Einerseits soll dem Leser der vorliegenden Arbeit ein grundlegendes Wissen über Software Engineering und Softwareentwicklungsmodelle vermittelt werden. Weiterhin sollen ihm auch grundlegende Kenntnisse in den Bereichen Prozessmodellierung und Prozessmodellierungssprachen, insbesondere imperative und deklarative Prozessmodellierungssprachen beigebracht werden. \newline
 
-Zudem sollen dem Leser die Softwareprozessmodelle Scrum, Open UP und V-Modell XT vorgestellt werden. Ein weiteres Ziel ist es hier, diese drei Modelle zu analysieren und somit für die nachfolgende Modellierung auf zu bereiten.\newline
+Zudem soll ein Einführung des Lesers in die Softwareprozessmodelle Scrum, Open UP und V-Modell XT erfolgen. Ein weiteres Ziel ist es hier, diese drei Modelle zu analysieren und somit für die nachfolgende Modellierung aufzubereiten.\newline
 
 Das nächste Ziel dieser Arbeit ist es sodann, Teile der Softwareprozessmodelle Scrum, Open UP und V-Modell XT in der imperativen Prozessmodellierungssprache BPMN und in der deklarativen Prozessmodellierungssprache ConDec zu modellieren. Hierdurch wird der Grundstein für den nachfolgenden Vergleich dieser Modelle gelegt.\newline
 
@@ -36,7 +36,7 @@ Ein weiteres Ziel ist die Validierung der Ergebnisse des durchgeführten Verglei
 
 \section{Aufbau der Arbeit}
 
-Eine Übersicht über den Aufbau dieser Arbeit gibt Abbildung.
+Eine Übersicht über den Aufbau dieser Arbeit gibt Abbildung \ref{fig:Aufbau}.
 Zunächst werden in Kapitel 2 und 3 grundlegende Begriffe erläutert, welche für das Verständnis der vorliegenden Arbeit notwendig sind.\newline
 
 \textbf{Kapitel 2} liefert zunächst einen Einblick in Prozessmodelle. In Kapitel 2.1 wird der Begriff Software Engineering eingeführt und es werden die Ziele, der Prozess sowie die Prinzipien des Software Engineering vorgestellt. Anschließend werden in Kapitel 2.2 Softwareprozesse erläutert. Hierfür werden Software-Projekttypen sowie Schwergewichtige und Leichtgewichtige Prozessmodelle definiert.\newline
@@ -53,4 +53,10 @@ Die Validierung der Ergebnisse aus Kapitel 5 wird in \textbf{Kapitel 6} durchgef
 
 \textbf{Kapitel 8} fasst die gesamt Arbeit nochmals zusammen und gibt weiterhin einen Ausblick auf zukünftige Forschung in dieser Thematik.
 
-
+\begin{figure}[htp]
+\begin{center}
+  \includegraphics[scale=0.8]{Aufbau} %pdf, jpg, png...
+  \caption{Aufbau der Arbeit}
+  \label{fig:Aufbau}
+\end{center}
+\end{figure}
