--- a/Masterarbeit 4/Tex/chapter6.tex
+++ b/Masterarbeit 4/Tex/chapter6.tex
@@ -943,7 +943,7 @@ Die Aktivitäten \textit{Systemarchitektur erstellen, Unterstütungssystemarchit
 
 \subsubsection{System spezifizieren}
 
-
+SystemV
 Am Anfang des Unterprozesses \textit{System spezifizieren} (Abbildung \ref{fig:BerichtswesenimpKlein}) muss eine \textit{Besprechung durchgeführt} werden. Hieraus entsteht das Artefakt \textit{Besprechungsdokument}.\newline
 Parallel zu allen anderen Aktivitäten ist bei Bedarf bei jeder Änderung das \textit{Projekttagebuch zu führen}. Dies wird durch das Parallel-Gateway sichergstellt und die XOR-Schleife stellt sicher, dass die Akrtivität so oft durchgeführt wird, wie Anpassungen notwendig sind. \newline
 Im nächsten Schritt werden die \textit{Messdaten erfasst}.\newline
