--- a/Masterarbeit 4/Tex/chapter7.tex
+++ b/Masterarbeit 4/Tex/chapter7.tex
@@ -37,7 +37,7 @@ Untersucht wird hier, ob sich die Punktzahlen bei Modellen, bei denen es zwische
 
 \section{Design der Studie}
 
-Abbildung \ref{fig:UmfrageStruktur} kann die Struktur der Umfrage entnommen werden.
+Abbildung \ref{fig:Umfrage} kann die Struktur der Umfrage entnommen werden.
 Bei der Studie wurden zwei Fragebögen eingesetzt. Die 32 Teilnehmer der Studie wurden deswegen zufallsbedingt in zwei Gruppen (je 16 Personen) eingeteilt. Zunächst wurden den Probanden allgemeine demographische Fragen gestellt (Geschlecht, Alter, Hintergrundwissen zu imperativer und deklarativer Modellierung, Hintergrundwissen zu den Software Engineering Prozessmodellen Scrum, Open UP und V-Modell XT).\newline
 Anschließend wurden den Teilnehmern Verständnisfragen zu ausgewählten Modellen gestellt.
 Es wurden die vier  Modellpaare \textit{Lösungsinkrement entwickeln (Open UP)}, \textit{Scrum}, \textit{Systementwicklungsprojekt AG/AN} und \textit{Phasen Open UP -Inception}  aus Kapitel 5 ausgewählt. Hierbei wurde darauf geachtet, dass es sich um zwei kleine Modelle (<= 5 Aktivitäten) und zwei große Modelle (> 5 Aktivitäten) handelt. Gruppe 1 startete mit einem deklarativen Prozess und Gruppe 2 mit dem entsprechenden imperativen Prozess. Somit wurden von jeder Gruppe zwei imperative und zwei deklarative Prozesse bearbeitet.  \newline
@@ -100,7 +100,7 @@ Es wurden 32 Studenten und Doktoranden aus dem Bereich Informatik/Medieninformat
 \subsection{Ergebnisse Verständnisfragen}
 
 Abbildung \ref{fig:Frage1} zeigt die Ergebnisse der Verständnisfragen zum Modell \textit{Open UP:Lösungsinkrement entwickeln}. Die Ergebnisse variieren hier zwischen den deklarativen und imperativen Modellen. Während die Ergebnisse teilweise gleich sind, bzw. nur wenig voneinander abweichen, liegen die Ergebnisse der deklarativen Modelle bei den Fragen 5 und 6 deutlich unter den Ergebnissen der imperativen Modelle. \newline
-Frage 5 lautete: \textit{Nach Ausführung der Aktivität \grqq Integrieren\grqq \ endet der Prozess in jedem Fall sofort}. Hier wurde von den Teilnehmern die imperative XOR- Verknüpfung besser verstanden, als die deklarative Darstellung des Ablaufes. Auch bei Frage 6 (\textit{Als erste Aktivität im Prozess kann die Aktivität \grqq Entwickeltest implementieren\grqq \ ausgeführt werden}) war den Probanden die imperative XOR-Darstellung, wohl in Verbindung mit dem BPMN Startsymbol als klaren Einstiegspunkt klarer, als die entsprechende deklarative Darstellung.\newline
+Frage 5 lautete: \textit{Nach Ausführung der Aktivität \grqq Integrieren\grqq \ endet der Prozess in jedem Fall sofort}. Hier wurde von den Teilnehmern die imperative XOR- Verknüpfung besser verstanden, als die deklarative Darstellung des Ablaufes. Auch bei Frage 6 (\textit{Als erste Aktivität im Prozess kann die Aktivität \grqq Entwickeltest implementieren\grqq \ ausgeführt werden}) war den Probanden die imperative XOR-Darstellung, wohl in Verbindung mit dem BPMN Startsymbol als eindeutigen Einstiegspunkt klarer, als die entsprechende deklarative Darstellung.\newline
 Der gesamte Mittelwert aller acht Fragen beträgt bei der imperativen Gruppe 0,96 und bei der deklarativen Gruppe 0,76. Dies stellt eine Differenz von 0,1953 Punkten dar. \newline
 
 \begin{figure}[htp]
@@ -113,8 +113,8 @@ Der gesamte Mittelwert aller acht Fragen beträgt bei der imperativen Gruppe 0,9
 
 
 Die Ergebnisse der Verständnisfrage 2 zum Modell \textit{Scrum} von allen Teilnehmern kann Abbildung \ref{fig:Frage2} entnommen werden.  Bei Scrum handelte es sich um ein großes Modell (>5 Aktivitäten), welches sowohl viele Verzweigungen, als auch viele parallele Aktivitäten aufweist. Auch hier weichen die Ergebnisse zwischen den imperativen und deklarativen Modellen voneinander ab.\newline
-Nur bei der ersten Frage (\textit{Ein Scrum Meeting dauert 15 Minuten}) schneidet der deklarative Prozess besser ab, als der imperative. Diese allgemeine Information aus dem Prozess befand sich bei beiden Prozessen in der Beschriftung der Aufgabe \textit{15-minütiges Scrum Meeting durchführen}. Der imperative Scrum-Prozess weist insgesamt mehr Elemente auf, als der deklarative. Daher fiel es wohl den Probanden hier einfacher die Übersicht über allgemeine Informationen zu behalten.\newline
-Bei den Fragen 2 und 8 hat das deklarative Modell eine sehr schlechte Punktzahl erreicht. Bei Frage 2 (\textit{Die Aktivität \grqq Task abarbeiten\grqq \ kann beliebig ausgeführt werden}) konnten die Teilnehmer der XOR-Verknüpfung im imperativen Modell welche eine Rückschleife auf die Aktivität \textit{Task abarbeiten} mehr folgen, als der entsprechenden Darstellung der Aktivität im deklarativen Modell. \newline
+Nur bei der ersten Frage (\textit{Ein Scrum Meeting dauert 15 Minuten}) schnitt der deklarative Prozess besser ab als der imperative. Diese allgemeine Information aus dem Prozess befand sich bei beiden Prozessen in der Beschriftung der Aufgabe \textit{15-minütiges Scrum Meeting durchführen}. Der imperative Scrum-Prozess weist insgesamt mehr Elemente auf als der deklarative. Daher fiel es wohl den Probanden einfacher, die Übersicht über allgemeine Informationen zu behalten.\newline
+Bei den Fragen 2 und 8 hat das deklarative Modell eine sehr schlechte Punktzahl erreicht. Bei Frage 2 (\textit{Die Aktivität \grqq Task abarbeiten\grqq \ kann beliebig ausgeführt werden}) konnten die Teilnehmer der XOR-Verknüpfung im imperativen Modell, welche eine Rückschleife auf die Aktivität \textit{Task abarbeiten}, mehr folgen als der entsprechenden Darstellung der Aktivität im deklarativen Modell. \newline
 Das gleiche gilt für Frage 8 (\textit{Nach Beendigung der Aufgabe \grqq Task abarbeiten\grqq \ endet der Prozess sofort}). Auch hier wurde die Verzweigung und das damit mögliche Zurückkehren zur Aufgabe \textit{Sprint-Planning-Meeting durchführen} durch eine XOR-Verknüpfung im imperativen Modell dargestellt und war somit für die Teilnehmer klarer verständlich.\newline
 Der Mittelwert aller acht Fragen insgesamt ist bei der imperativen Gruppe 0,89 und bei der deklarativen Gruppe 0,70. Die Differenz beträgt somit 0,1875 Punkte.\newline
 
@@ -127,10 +127,10 @@ Der Mittelwert aller acht Fragen insgesamt ist bei der imperativen Gruppe 0,89 u
 \end{center}
 \end{figure}
 
-Beim Modell \textit{V-Modell: Systementwicklungsprojekt AG/AN} der Verständnisfrage 3 lagen die Ergebnisse des deklarativen Modell bis auf Frage 3 immer unter denen des imperativen Modells. Starke Abweichung gab es bei den Fragen 2, 4, 5, 7. \newline
-Bei Frage 2 (\textit{Die Aktivitäten \grqq Prototypische Entwicklung durchführen\grqq, \grqq Komponentenbasierte Entwicklung durchführen\grqq \ und \grqq Inkrementelle Entwicklung durchführen\grqq \ können parallel zueinander ausgeführt werden}) war den Teilnehmern, welche das deklarative Modell bearbeiten mussten, die Notation des Constraints \textit {Exclusive Choice 1 of 3} nicht ganz klar. Sechs der 16 Probanden kreuzten hier entweder \textit{Ja} oder \textit{Unentschlossen} an. Hier musste im deklarativen Modell ein zusätzlicher Unterprozess eingefügt werden, da das Verhalten des Prozessesnicht anders darzustellen war. Eventuell waren die Probanden her auch von dem zusätzlichen Unterprozess iritiert.\newline
-Sowohl Frage 4 (\textit{Nach Ausführung der Aktivität \grqq System abnehmen\grqq \ kann die Aktivität \grqq Anforderungen festlegen\grqq \ ausgeführt werden}, als auch Frage 5 (\textit{Nach Ausführung der Aktivität \grqq System abnehmen\grqq \ kann die Aktivität \grqq Projekt ausschreiben\grqq \ ausgeführt werden}) zielten wieder auf Verzweigungen des Prozesses ab und waren den Teilnehmern mit dem imperativen Prozess klarer. \newline
-Frage 7 (\textit{Nach Ausführung der Aktivität \grqq Projekt abschließen\grqq \ endet der Prozess}) wurde von den Probanden, welchen das imperative Modell gezeigt wurde richtiger beantwortet. Hier war im imperativen Modell durch das BPMN-Ende-Symbol den Teilnehmern das Ende des Prozesses wohl klarer als die Darstellung durch das Constraint \textit{not succession} im deklarativen Modell.\newline
+Beim Modell \textit{V-Modell: Systementwicklungsprojekt AG/AN} der Verständnisfrage 3 lagen die Ergebnisse des deklarativen Modell bis auf Frage 3 immer unter denen des imperativen Modells (Abbildung \ref{fig:Frage3}). Starke Abweichung gab es bei den Fragen 2, 4, 5, 7. \newline
+Bei Frage 2 (\textit{Die Aktivitäten \grqq Prototypische Entwicklung durchführen\grqq, \grqq Komponentenbasierte Entwicklung durchführen\grqq \ und \grqq Inkrementelle Entwicklung durchführen\grqq \ können parallel zueinander ausgeführt werden}) war den Teilnehmern, welche das deklarative Modell bearbeiten mussten, die Notation des Constraints \textit {Exclusive Choice 1 of 3} nicht ganz klar. Sechs der 16 Probanden kreuzten hier entweder \textit{Ja} oder \textit{Unentschlossen} an. Hier musste im deklarativen Modell ein zusätzlicher Unterprozess eingefügt werden, da das Verhalten des Prozesses nicht anders darzustellen war. Eventuell waren die Probanden auch von dem zusätzlichen Unterprozess iritiert.\newline
+Sowohl Frage 4 (\textit{Nach Ausführung der Aktivität \grqq System abnehmen\grqq \ kann die Aktivität \grqq Anforderungen festlegen\grqq \ ausgeführt werden}, als auch Frage 5 (\textit{Nach Ausführung der Aktivität \grqq System abnehmen\grqq \ kann die Aktivität \grqq Projekt ausschreiben\grqq \ ausgeführt werden}) zielten wieder auf Verzweigungen des Prozesses ab und waren den Teilnehmern mit dem imperativen Prozess verständlicher. \newline
+Frage 7 (\textit{Nach Ausführung der Aktivität \grqq Projekt abschließen\grqq \ endet der Prozess}) wurde von den Probanden, welchen das imperative Modell gezeigt wurde, richtiger beantwortet. Hier war im imperativen Modell durch das BPMN-Ende-Symbol den Teilnehmern das Ende des Prozesses wohl bewußter als die Darstellung durch das Constraint \textit{not succession} im deklarativen Modell.\newline
 Bei allen acht Fragen insgesamt ist der Mittelwert bei der imperativen Gruppe 0,96 und bei der deklarativen Gruppe 0,70. Hieraus ergibt sich eine Differenz von 0,2578 Punkten. \newline
 
 
@@ -142,7 +142,7 @@ Bei allen acht Fragen insgesamt ist der Mittelwert bei der imperativen Gruppe 0,
 \end{center}
 \end{figure}
 
-Die Ergebnisse des Prozesses \textit{Open UP: Inception} weichen zwischen den deklarativen und imperativen Modellen nicht stark voneinander ab. \newline
+Die Ergebnisse des Prozesses \textit{Open UP: Inception} weichen zwischen den deklarativen und imperativen Modellen nicht stark voneinander ab (Abbildung \ref{fig:Frage3}). \newline
 Lediglich bei Frage 6 (\textit{Die Aktivität \grqq Iteration planen und managen\grqq \ kann beliebig oft ausgeführt werden}) und Frage 7 (\textit{Die Aktivitäten \grqq Anforderungen identifizieren und verfeinern\grqq \ und \grqq auf technisches Vorgehen einigen\grqq \ können beliebig oft ausgeführt werden}) war den Teilnehmern wohl teilweise die Funktion des Existenz (1) Constraints nicht ganz klar oder wurde übersehen.\newline
 Der gesamte Mittelwert aller acht Fragen ist bei der imperativen Gruppe 0,96 und bei der deklarativen Gruppe 0,85. Die Differenz beträgt somit 0,14 Punkte. \newline
 
@@ -161,7 +161,7 @@ Der gesamte Mittelwert aller acht Fragen ist bei der imperativen Gruppe 0,96 und
 \subsection{Ergebnisse Meinungsfragen}
 
 Abbildung \ref{fig:Meinungsfrage1} zeigt, dass 31 der 32 Befragten beim Modell \textit{System spezifizieren} das imperative Modell bevorzugen. Nur eine Person zog das deklarative Modell vor. Hierbei handelt es sich um einen Teilnehmer, welcher weder in imperativer, noch in deklarativer Prozessmodellierung Erfahrung aufweist. Als Begründung für den Vorzug des deklarativen Modells gab der Befragte an, das Modell sei kompakter, jedoch sei auch mehr Verständnis notwendig.\newline
-Die Probanden, welche das imperative Modell bevorzugten gaben verschiedene Gründe hierfür an. Unter anderem nannten sie als Grund die klarere Struktur des BPMN-Modells, die vielen unterschiedlichen/komplexen Elemente im deklarativen Modell oder auch die klare Rollenverteilung durch die Swimlanes. Einige der Befragten gaben auch ihre besseren Kenntnisse in imperativen Prozessmodellierungssprachen als Grund an.\newline
+Die Probanden, welche das imperative Modell bevorzugten, gaben verschiedene Gründe hierfür an. Unter anderem nannten sie als Grund die klarere Struktur des BPMN-Modells, die vielen unterschiedlichen/komplexen Elemente im deklarativen Modell oder auch die klare Rollenverteilung durch die Swimlanes. Einige der Befragten gaben auch ihre besseren Kenntnisse in imperativen Prozessmodellierungssprachen als Grund an.\newline
 
 \begin{figure}[htp]
 \begin{center}
@@ -186,7 +186,7 @@ Die Personen, welche das imperative Modell präferierten gaben an, dass sie den 
 
 Die Ergebnisse des dritten Modellpaares \textit{Inkrementelle Entwicklung} zeigt Abbildung \ref{fig:Meinungsfrage3}. Demnach präferierten nur zwei Personen (eine Person mit Erfahrung sowohl in imperativer, als auch in deklarativer Modellierung, eine Person ohne imperative und deklarative Modellierungserfahrung) das deklarative Modell und 30 Probanden ziehen das imperative Modell vor.\newline
 Als Grund für den Vorzug des imperativen Modells wurde die Menge an unterschiedlichen Symbolen beim imperativen Modell genannt. \newline
-Die 30 Personen, welchen das imperative Modell besser gefiel gaben an, dass sie die imperative Notation verständlicher finden, der Ablauf im imperativen Modell klarer erkennbar sei, sie keinen Anhaltspunkt haben, wo im deklarativen Modell gestartet bzw. geendet wird und die vielen verschiedenen Constraints im deklarativen Modell es erschweren den Ablauf nachzuvollziehen.\newline
+Die 30 Personen, welchen das imperative Modell besser gefiel, gaben an, dass sie die imperative Notation verständlicher finden, der Ablauf im imperativen Modell klarer erkennbar sei, sie keinen Anhaltspunkt haben, wo im deklarativen Modell gestartet bzw. geendet wird und die vielen verschiedenen Constraints im deklarativen Modell es erschweren, den Ablauf nachzuvollziehen.\newline
 
 \begin{figure}[htp]
 \begin{center}
@@ -196,9 +196,9 @@ Die 30 Personen, welchen das imperative Modell besser gefiel gaben an, dass sie 
 \end{center}
 \end{figure}
 
-Beim Modell \textit{Open UP: Release deployen} präferierten neun Personen das deklarative Modell und 23 Teilnehmer das imperative Modell. Von den neun Teilnehmern, welche das deklarative Modell präferierten hatte nur einer Erfahrung in deklarativer Modellierung, einer hatte weder in deklarativer noch in imperativer Modellierung Erfahrung und sieben hatten nur in imperativer Modellierung Erfahrung. \newline
+Beim Modell \textit{Open UP: Release deployen} präferierten neun Personen das deklarative Modell und 23 Teilnehmer das imperative Modell (Abbildung \ref{fig:Meinungsfrage4}). Von den neun Teilnehmern, welche das deklarative Modell bevorzugten hatte nur einer Kenntnisse in deklarativer Modellierung, einer hatte weder in deklarativer noch in imperativer Modellierung Erfahrung und sieben verfügten nur über Wissen in imperativer Modellierung. \newline
 Als Begründung für die Wahl des deklarativen Modelles wurde die Übersichtlichkeit desselbigen genannt und zwar auf Grund der fehlenden Artefakte im Modell. Es wurde bemängelt, die vielen Artefakte würden das imperative Modell unübersichtlich machen.\newline
-Die Probanden, welche das imperative Modell besser fanden gaben als Gründe den klaren Anfang und das klare Ende des Prozesses an, die bessere Verständlichkeit der Optionalität der Aktivität \textit{Backoutplan ausführen} und die fehlenden Artefakte im deklarativen Modell. \newline
+Die Probanden, welche das imperative Modell besser fanden, gaben als Gründe den klaren Anfang und das klare Ende des Prozesses an, die bessere Verständlichkeit der Optionalität der Aktivität \textit{Backoutplan ausführen} und die fehlenden Artefakte im deklarativen Modell. \newline
 
 
 
@@ -219,15 +219,15 @@ Durch die Studie konnten die Ergebnisse des Vergleichs aus Kapitel 5 größtente
 \subsubsection{Richtigkeit, Relevanz}
 
 
-In den Modellen \textit{Scrum (Verständnisfrage 2)}, \textit{System spezifizieren (Meinungsfrage 1)} und \textit{Release deployen (Meinungsfrage 4)} waren sowohl Artefakte, als auch Rollen enthalten. Die Differenz der Punktsummen zwischen der imperativen und der deklarativen Gruppe von \textit{Scrum} beträgt 0,1875. Dies ist die zweitgeringste Abweichung zwischen der imperativen und der deklarativen Gruppe. Zwei Modelle, bei welchen auch im imperativen Modell keine Rollen und Artefakte abgebildet waren hatten sogar noch größere Differenzen zwischen der imperativen und der deklarativen Gruppe. Aus diesem Grund kann hier kein besseres Verständnis des Prozessablaufes durch Rollen und Artefakte angenommen werden. \newline
+In den Modellen \textit{Scrum (Verständnisfrage 2)}, \textit{System spezifizieren (Meinungsfrage 1)} und \textit{Release deployen (Meinungsfrage 4)} waren sowohl Artefakte, als auch Rollen enthalten. Die Differenz der Punktsummen zwischen der imperativen und der deklarativen Gruppe von \textit{Scrum} beträgt 0,1875. Dies ist die zweitgeringste Abweichung zwischen der imperativen und der deklarativen Gruppe. Zwei Modelle, bei welchen auch im imperativen Modell keine Rollen und Artefakte abgebildet waren, hatten sogar noch größere Differenzen zwischen der imperativen und der deklarativen Gruppe. Aus diesem Grund kann hier kein besseres Verständnis des Prozessablaufes durch Rollen und Artefakte angenommen werden. \newline
 Die fehlende Visualisierbarkeit von Rollen im deklarativen Modell wurde von keinem der Teilnehmer bemängelt.\newline
 
 
 
-\subsubsection{systematischer Aufbau}
+\subsubsection{Systematischer Aufbau}
 
 Wie bereits beim Grundsatz \textit{Richtigkeit} erwähnt, kann kein negativer Einfluß auf die Verständlichkeit beobachtet werden, wenn im deklarativen Modell keine Artefakte enthalten sind.\newline
-Während ein großer Teil der Probanden bei den Modellen \textit{System spezifizieren (Meinungsfrage 1)} und \textit{Release deployen (Meinungsfrage 4)} fehlende Artefakte im deklarativen bemängelten empfand ein kleiner Teil der Probanden diese im imperativen Modell als störend. Die Mehrheit der Teilnehmer entschied sich jedoch für das imperative Modell mit der Begründung, dass die Artefakte beim Verständnis helfen würden. 
+Während ein großer Teil der Probanden bei den Modellen \textit{System spezifizieren (Meinungsfrage 1)} und \textit{Release deployen (Meinungsfrage 4)} fehlende Artefakte im deklarativen bemängelten, empfand ein kleiner Teil der Probanden diese im imperativen Modell als störend. Die Mehrheit der Teilnehmer entschied sich jedoch für das imperative Modell mit der Begründung, dass die Artefakte beim Verständnis helfen würden. 
 
 \subsubsection{Klarheit, Wirtschaftlichkeit}
 
@@ -235,28 +235,38 @@ Während ein großer Teil der Probanden bei den Modellen \textit{System spezifiz
 
 Nachfolgend werden die beiden Grundsätze \textit{Klarheit} und \textit{Wirtschaftlichkeit} zusammengefasst, da sie hier die gleichen Kriterien haben und die \textit{Wirtschaftlichkeit} im Rahmen dieser Studie nicht getestet werden kann.\newline
 
-Bei Modellen, welche viele Verzweigungen/Schleifen beinhalten war für die Teilnehmer BPMN verständlicher. Dies zeigte sich beim kleinen Prozess \textit{Open UP:Lösungsinkrement entwickeln}, bei dem die Punktzahlen bei der BPMN Gruppe leicht höher waren, als bei der deklarativen Gruppe und noch deutlicher beim großen Modell \textit{V-Modell: Systementwicklungsprojekt AG/AN}. Bei diesen beiden Prozessen sind in ConDec deutlich mehr Constraints, vor allem viele verschiedene Constraints zur korrekten Darstellung des Ablaufs notwendig als Gateways in BPMN. Dadurch haben die ConDec-Modelle eine deutlich höhere Komplexität, als die BPMN-Modelle.\newline
+Bei Modellen, welche viele Verzweigungen/Schleifen beinhalten, war für die Teilnehmer BPMN verständlicher. Dies zeigte sich beim kleinen Prozess \textit{Open UP:Lösungsinkrement entwickeln}, bei dem die Punktzahlen bei der BPMN Gruppe leicht höher waren, als bei der deklarativen Gruppe und noch deutlicher beim großen Modell \textit{V-Modell: Systementwicklungsprojekt AG/AN}. Bei diesen beiden Prozessen sind in ConDec deutlich mehr Constraints, vor allem viele verschiedene Constraints zur korrekten Darstellung des Ablaufs, notwendig als Gateways in BPMN. Dadurch haben die ConDec-Modelle eine deutlich höhere Komplexität als die BPMN-Modelle.\newline
 
-Hier fällt besonders auf, dass Fragen bezüglich der Reihenfolge der Aktivitäten bei ConDec bei direkt aufeinander folgenden Aktivitäten größtenteils richtig beantwortet wurden. Jedoch bei Abläufen, bei denen es durch Verzweigungen im Prozessablauf zu einem Sprung kommt wurden nur die Fragen zu den BPMN-Modellen größtenteils richtig beantwortet und bei ConDec wurden diese Fragen häufig falsch beantwortet.\newline
+Hier fällt besonders auf, dass Fragen bezüglich der Reihenfolge der Aktivitäten bei ConDec bei direkt aufeinander folgenden Aktivitäten größtenteils richtig beantwortet wurden. Jedoch bei Abläufen, bei denen es durch Verzweigungen im Prozessablauf zu einem Rücksprung kommt, wurden nur die Fragen zu den BPMN-Modellen größtenteils richtig beantwortet und bei ConDec wurden diese Fragen häufig falsch beantwortet.\newline
 
-Das gleiche gilt für den Prozess \textit{Scrum}. Die beiden Fragen, welche von der deklarativen Gruppe sehr fehlerhaft beantwortet wurden, hatten beide mit Verzweigungen innerhalb des Prozesses zu tun und wurden von der imperativen Gruppe durch die dortige Darstellung mit Hilfe eines XOR-Gateways wesentlich besser verstanden. Jedoch konnte die allgemeine Frage zum Prozess, wie lange ein Scrum-Meeting dauert von der deklarativen Gruppe besser beantwortet werden, da der deklarative Prozess über weniger Elemente verfügt als der imperative, dadurch kompakter ist und somit können allgemeine Informationen leichter gefunden werden. \newline
+Das gleiche gilt für den Prozess \textit{Scrum}. Die beiden Fragen, welche von der deklarativen Gruppe sehr fehlerhaft beantwortet wurden, hatten beide mit Verzweigungen innerhalb des Prozesses zu tun und wurden von der imperativen Gruppe durch die dortige Darstellung mit Hilfe eines XOR-Gateways wesentlich besser verstanden. Jedoch konnte die allgemeine Frage zum Prozess, wie lange ein Scrum-Meeting dauert, von der deklarativen Gruppe besser beantwortet werden, da der deklarative Prozess über weniger Elemente verfügt als der imperative, dadurch kompakter ist und somit können allgemeine Informationen leichter gefunden werden. \newline
 Beim letzten Prozess \textit{Inception} haben sich die Erkenntnisse aus Kapitel 5 nicht ganz bestätigt. Auf Grund der vielen parallelen Aktivitäten in diesem Prozess ist der deklarative Prozess hier der weniger komplexe und übersichtlichere. Jedoch wurden die Fragen von der imperativen Gruppe dennoch häufiger richtig beantwortet, als von der deklarativen Gruppe. Zwar ist der Unterschied nicht sehr groß, dennoch war hier das Ergebnis genau gegensätzlich erwartet.\newline
 
-Bei den Meinungsfragen wurden bei allen Modellen die imperativen Prozesse vorgezogen. Die Begründungen der Teilnehmer bestätigen größtenteils die Ergebnisse aus Kapitel 5. Viele Teilnehmer gaben die hohe Komplexität der ConDec Constraints an, vor allem bei den Modellen \textit{System spezifizieren} und \textit{Inkrementelle Entwicklung}. In diesen beiden Modellen finden sich sehr viele auch viele unterschiedliche Constraints, was die Modelle sehr komplex macht.\newline
-Bei den beiden Modellen \textit{Open UP: Phasen} und \textit{Release deployen} wurden als Grund hauptsächlich die bessere Verständlichkeit der Schleifen/Optionalitäten von Aufgaben genannt. Diese wurden in den imperativen Modellen mit XOR-Verbindungen dargestellt, anstelle von mehreren Constraints bei den ConDec Modellen. Auch hier zeigt sich wieder, dass die BPMN-Modelle bei Prozessen mit Schleifen/Verzweigungen weniger komplex sind, als die ConDec Modelle und daher auch besser verständlich sind.\newline
+Bei den Meinungsfragen wurden bei allen Modellen die imperativen Prozesse vorgezogen. Die Begründungen der Teilnehmer bestätigen größtenteils die Ergebnisse aus Kapitel 5. Viele Teilnehmer gaben die hohe Komplexität der ConDec Constraints an, vor allem bei den Modellen \textit{System spezifizieren} und \textit{Inkrementelle Entwicklung}. In diesen beiden Modellen finden sich sehr viele (auch unterschiedliche) Constraints, was die Modelle sehr komplex macht.\newline
+Bei den beiden Modellen \textit{Open UP: Phasen} und \textit{Release deployen} wurden als Grund hauptsächlich die bessere Verständlichkeit der Schleifen/Optionalitäten von Aufgaben genannt. Diese wurden in den imperativen Modellen mit XOR-Verbindungen dargestellt, anstelle von mehreren Constraints bei den ConDec Modellen. Auch hier zeigt sich wieder, dass die BPMN-Modelle bei Prozessen mit Schleifen/Verzweigungen weniger komplex sind als die ConDec Modelle und daher auch besser verständlich sind.\newline
 
 
 \subsubsection{Vergleichbarkeit}
 Das gleiche Ausführungsverhalten der deklarativen und imperativen Prozesse wurde schon im Zuge der Vergleiche aus Kapitel 5 getestet und sichergestellt. \newline
-Obwohl bei manchen Modellen die BPMN-Modelle insgesamt mehr Elemente aufweisen, weisen die imperativen Gruppen dennoch grundsätzlich höhere Punktzahlen auf, als die deklarativen Gruppen. Einzig beim Modell \textit{Scrum} wurde die allgemeine Frage zum Prozess, wie lange ein Scrum-Meeting dauern würde von der deklarativen Gruppe besser beantwortet als von der imperativen Gruppe. Dennoch kann hier den größeren BPMN-Modellen keine mangelnde Vergleichbarkeit zugeschrieben werden.\newline
+Obwohl bei manchen Modellen die BPMN-Modelle insgesamt mehr Elemente aufweisen, weisen die imperativen Gruppen dennoch grundsätzlich höhere Punktzahlen auf als die deklarativen Gruppen. Einzig beim Modell \textit{Scrum} wurde die allgemeine Frage zum Prozess, wie lange ein Scrum-Meeting dauern würde, von der deklarativen Gruppe besser beantwortet als von der imperativen Gruppe. Dennoch kann hier den größeren BPMN-Modellen keine mangelnde Vergleichbarkeit zugeschrieben werden.\newline
 Bei ConDec gibt es hier wiederum Grenzen in der Darstellbarkeit in Bezug auf Rollen und Artefakte, weshalb ConDec an dieser Stelle die Vergleichbarkeit nicht einhalten kann.\newline
 
+
+Tabelle \ref{fig:TabelleStudie} fasst die Ergebnisse der Studie nochmal zusammen:
+
+\begin{figure}[htp]
+\begin{center}
+  \includegraphics[scale=0.8]{TabelleStudie} %pdf, jpg, png...
+  \caption{Zusammenfassung Ergebnisse Studie}
+  \label{fig:TabelleStudie}
+\end{center}
+\end{figure}
 
 
 \subsection{Grenzen der Studie}
 
 Eine große Menge der Teilnehmer hatte einige Vorkenntnisse in imperativer Modellierung (sieben nur imperativ, 18 imperativ und deklarativ). Einige der Befragten gaben auch bei den Meinungsfragen an, sie hätten einfach bessere Kenntnisse in imperativer Modellierung und würden daher die imperativen Modelle bevorzugen. Aus diesem Grund kann hier ein Einfluss der besseren Kenntnis der imperativen Modellierung der Probanden auf die Ergebnisse der Studie nicht ausgeschlossen werden. \newline 
-Zudem konnten die Ergebnisse von Personengruppen ohne jegliche imperative und deklarative Prozessmodellierungserfahrung und Personengruppen mit imperativer oder imperativer und deklarativer Prozessmodellierungserfahrung nicht miteinander verglichen werden, da sich die Zahl dieser Personengruppen stark voneinander unterschied ( 7 gegen 25 Personen).\newline
+Zudem konnten die Ergebnisse von Personengruppen ohne jegliche imperative und deklarative Prozessmodellierungserfahrung und Personengruppen mit imperativer oder imperativer und deklarativer Prozessmodellierungserfahrung nicht miteinander verglichen werden, da sich die Zahl dieser Personengruppen stark voneinander unterschied (7 gegen 25 Personen).\newline
 Weiterhin wurde zwar darauf geachtet, Modelle mit unterschiedlichen Abläufen und Größen auszuwählen, jedoch können die Ergebnisse trotzdem nicht unbedingt grundsätzlich auf alle imperativen und deklarativen Modellpaare übertragen werden. \newline
 
  
