--- a/Masterarbeit 4/Tex/Literature.bib
+++ b/Masterarbeit 4/Tex/Literature.bib
@@ -733,5 +733,12 @@ year={2014}}
   publisher={De Gruyter}
 }
 
+@book{gumm2012einführung,
+  title={Einf{\"u}hrung in die Informatik},
+  author={Gumm, H.P. and Sommer, M.},
+  year={2012},
+  publisher={Oldenbourg Wissenschaftsverlag}
+}
+
 
 	
