--- a/Masterarbeit 4/Tex/chapter7.tex
+++ b/Masterarbeit 4/Tex/chapter7.tex
@@ -256,7 +256,7 @@ Tabelle \ref{fig:TabelleStudie} fasst die Ergebnisse der Studie nochmal zusammen
 
 \begin{figure}[htp]
 \begin{center}
-  \includegraphics[scale=0.8]{TabelleStudie} %pdf, jpg, png...
+  \includegraphics[width=\textwidth]{TabelleStudie} %pdf, jpg, png...
   \caption{Zusammenfassung Ergebnisse Studie}
   \label{fig:TabelleStudie}
 \end{center}
