--- a/Masterarbeit 4/Tex/chapter5.tex
+++ b/Masterarbeit 4/Tex/chapter5.tex
@@ -84,10 +84,10 @@ Weiterhin wird die Vergleichbarkeit in Bezug auf das Ausführungsverhalten der i
 Außerdem wird hier die Größe der jeweiligen Prozessmodelle als Vergleichskriterium herangezogen. Hier wird die Gesamtanzahl der notwendigen Elemente zur Darstellung des Prozessmodells verglichen. Es soll festgestellt werden, ob bei Verwendung einer imperativen oder deklarativen Prozessmodellierungssprache wesentlich mehr Elemente zur Darstellung des gleichen Prozesses notwendig sind indem die Anzahl der verwendeten Aktivitäten und Patterns verglichen wird \cite{leimeister2012, journals95, freund2007,reinshagen2009}.
 
  \subsubsection{A 6.3}
-Es wird hier somit insbesondere untersucht, ob die Abstraktionsgrade der Prozessmodelle sich wesentlich voneinander unterscheiden. 
+Es wird hier somit insbesondere untersucht, ob die Abstraktionsgrade der Prozessmodelle sich wesentlich voneinander unterscheiden, d.h. es wird untersucht, ob es bei einer der beiden Prozessmodellierungssprachen Grenzen in der Darstellbarkeit gibt.
 
 
-Eine Übersicht über die Modellierungsgrundsätze und die jeweiligen Vergleichskriterien bietet Abbildung \ref{fig:TabelleKriterien}.
+Eine Übersicht über die Modellierungsgrundsätze und die jeweiligen Vergleichskriterien und Unterkriterien mit ihren Abkürzungen bietet Abbildung \ref{fig:TabelleKriterien}.
 
 \begin{figure}[!htbp]
 \begin{center}
