--- a/Masterarbeit 4/Tex/chapter9.tex
+++ b/Masterarbeit 4/Tex/chapter9.tex
@@ -1,30 +1,30 @@
 \chapter{Verwandte Arbeiten}\label{sec:chapter9}
 
-In diesem Kapitel werden verwandte Arbeiten der vorliegenden Arbeit vorgestellt. Es werden Arbeiten zu den Themen Modellierung von Software-Engineering Prozessmodellen, Verständlichkeit von Prozessmodellierungssprachen und Vergleich von Prozessmodellierungssprachen beschrieben und gegenüber der Thematik der vorliegenden Arbeit abgegrenzt.
+In diesem Kapitel werden verwandte Arbeiten vorgestellt. Es werden Arbeiten zu den Themen Modellierung von Software-Engineering Prozessmodellen, Verständlichkeit von Prozessmodellierungssprachen und Vergleich von Prozessmodellierungssprachen beschrieben und gegenüber der Thematik der vorliegenden Arbeit abgegrenzt.
 
 \section{Modellierung von Softwareentwicklungsprozessen}
 
 Es gibt schon einige Arbeiten, welche sich mit der Modellierung von Software Engineering Prozessmodellen in BPMN beschäftigen.
-Die Bachelorarbeit \cite{Menhorn2014} beschäftigt sich mit der Analyse und der Überführung von Softwareentwicklungsprozessen in die Prozessmodellierungssprache BPMN und der Erweiterung von BPMN bei eventuellen Grenzen der Darstellbarkeit.\newline
+\cite{Menhorn2014} beschäftigt sich mit der Analyse und der Überführung von Softwareentwicklungsprozessen in die Prozessmodellierungssprache BPMN und der Erweiterung von BPMN bei eventuellen Grenzen der Darstellbarkeit.\newline
 Weiterhin gibt es drei Arbeiten, bzw. Blogeinträge, welche sich mit der Modellierung von Scrum \cite{software}, Open UP \cite{brunner2007fallstudie} und \cite{Bregenzer2014} V-Modell XT in BPMN beschäftigen. Hier werden jeweils Teile der drei Software-Engineering Prozessmodelle analysiert und anschließend in BPMN modelliert.\newline
-Im Gegensatz zur vorliegenden Arbeit werden in diesen Arbeiten entweder jeweils nur ein Software Engineering Prozessmodell modelliert oder die Modellierung wird nur in der Prozessmodellierungssprache BPMN durchgeführt. In der vorliegenden Arbeit hingegen werden Teile von allen drei Software Engineering Prozessmodellen in zwei verschiedenen Prozessmodellierungssprachen modelliert. Der Fokus der vorliegenden Arbeit liegt auf der Beurteilung der Eignung zur Modellierung der beiden Prozessmodellierungssprachen und auf deren Vergleich.\newline
+Im Gegensatz zur vorliegenden Arbeit werden in diesen Arbeiten entweder jeweils nur ein Software Engineering Prozessmodell modelliert oder die Modellierung wird nur in der Prozessmodellierungssprache BPMN durchgeführt. In der vorliegenden Arbeit hingegen werden Teile von allen drei Software Engineering Prozessmodellen in zwei verschiedenen Prozessmodellierungssprachen modelliert. Der Fokus der vorliegenden Arbeit liegt zudem auf der Beurteilung der Eignung zur Modellierung der beiden Prozessmodellierungssprachen und auf deren Vergleich und nicht auf der Modellierung der Softwareentwicklungsprozess an sich.\newline
 
 
 \section{Verständlichkeit von Prozessmodellierungssprachen}
 
 Verwandte Arbeiten zur Thematik Verständlichkeit von Prozessmodellierungssprachen werden im Folgenden vorgestellt.
 
-Es existieren bereits einige Arbeiten, welche die Verständlichkeit von Prozessmodellen untersuchen. \cite{bpm07} z.B. untersucht die Verständlichkeit von Ereignisgesteuerten Prozessketten (EPK), während in \cite{gruhn2006complexity} die Komplexität und Verständlichkeit von BPMN und UML-Diagrammen untersucht werden. \cite{reijers2011study} untersucht die Verständlichkeit von Ereignisgesteuerten Prozessketten (EPK) und BPMN im Hinblick auf die Komplexität der XOR-,OR- und UND-Verzweigungen. \newline
+Es existieren bereits einige Arbeiten, welche die Verständlichkeit von Prozessmodellen untersuchen. \cite{bpm07} z.B. untersucht die Verständlichkeit von Ereignisgesteuerten Prozessketten (EPK), während in \cite{gruhn2006complexity} die Komplexität und Verständlichkeit von BPMN und UML-Diagrammen untersucht wird. \cite{reijers2011study} untersucht die Verständlichkeit von Ereignisgesteuerten Prozessketten (EPK) und BPMN im Hinblick auf die Komplexität der XOR-,OR- und UND-Verzweigungen. \newline
 In \cite{sabrina942} wird die Verständlichkeit von deklarativen Prozessmodellen im Hinblick auf die Verwendung von hierarchischen Unterprozessen untersucht. Eine weitere Arbeit, welche sich mit der Verständlichkeit von deklarativen Prozessmodellen beschäfigt, ist \cite{haisjackl2014understanding}. Hier wird das Vorgehen von Systemanalysten beim Verstehen von deklarativen Modellen untersucht.\newline
 
 In der vorliegenden Arbeit werden einige Erkenntnisse der vorgestellten Arbeiten beim Modellieren und beim Vergleich der Prozessmodelle beachtet. Beispielsweise wurden Unterprozesse beim  Modellieren verwendet, um komplexe Prozessmodelle übersichtlicher darzustellen. Diese wurden  aber beim Modellieren von sowohl BPMN als auch ConDec bei den gleichen Sachverhalten angewendet.\newline
 Außerdem wurden die Ergebnisse von \cite{ haisjackl2014understanding} zum schwierigeren Verständnis von Patterns in BPMN bei der Durchführung des Vergleichs herangezogen.\newline
-Im Gegensatz zu den hier vorgestellten Arbeiten liegt der Fokus des Vergleiches in dieser Arbeit nicht ausschließlich auf der Verständlichkeit der beiden Prozessmodellierungssprachen, sondern vor allem auf deren Eignung zur Modellierung. Die Untersuchung der Verständlichkeit nimmt zwar in der vorliegenden Arbeit ebenfalls eine große Rolle ein, jedoch wird hier explizit die Verständlichkeit von zwei verschiednen Prozessmodellierungssprachen untersucht.\newline
+Im Gegensatz zu den hier vorgestellten Arbeiten liegt der Fokus des Vergleiches in dieser Arbeit nicht ausschließlich auf der Verständlichkeit der beiden Prozessmodellierungssprachen, sondern vor allem auf deren Eignung zur Modellierung. Die Untersuchung der Verständlichkeit nimmt zwar in der vorliegenden Arbeit ebenfalls eine große Rolle ein, jedoch wird hier explizit die Verständlichkeit von zwei verschiedenen Prozessmodellierungssprachen untersucht.\newline
 
 
 \section{Vergleich von Prozessmodellierungssprachen}
 
-Dieser Abschnitt widmet sich Arbeiten aus dem Bereich Vergleich von Prozessmodellierungssprachen und dem Abgrenzen dieser Arbeiten gegenüber der vorliegenden Arbeit.
+Dieser Abschnitt widmet sich Arbeiten, welche sich mit dem Vergleich von Prozessmodellierungssprachen beschäftigen.\newline
 Die Arbeit \cite{recker2007does} untersucht Unterschiede in der Verständlichkeit zwischen Ereignisgesteuerten Prozessketten (EPK) und BPMN.\newline
 Der Artikel \cite{fahland2010} beschäftigt sich mit dem Unterschied zwischen imperativen und deklarativen Prozessmodellierungssprachen und arbeitet deren Stärken und Schwächen heraus. Der Vergleich baut auf den Unterschieden von imperativen und deklarativen Programmiersprachen auf. \newline
 \cite{pichler2012} untersucht aufbauend auf den Erkenntnissen von  \cite{fahland2010} die Verständlichkeit von imperativen und deklarativen Prozessmodellierungssprachen anhand einer Studie. Als imperative Prozessmodellierungssprache dient in diesem Artikel ebenfalls BPMN und als deklarative Prozessmodellierungssprache ebenfalls ConDec. \newline 
