--- a/Masterarbeit 4/Tex/chapter2.tex
+++ b/Masterarbeit 4/Tex/chapter2.tex
@@ -1,6 +1,6 @@
 \chapter{Prozessmodelle}\label{sec:chapter2}
 
-In Kapitel 2 werden grundlegende Konzepte des Software Engineering vorgestellt, die notwendig sind, um den Inhalt dieser Arbeit zu verstehen. Zunächst wird in Kapitel 2.1 der Begriff Software Engineering definiert und die Ziele, der Prozess und die Prinzipien des Software Engineering werden erläutert. Weiterhin wird in Kapitel 2.2 der Begriff Softwareprozessmodell erklärt. Hierbei werden Softwareprojekttypen sowie schwergewichtige und leichtgewichtige Prozessmodelle beschrieben. Anschließend gibt es eine Einführung in die drei repräsentativen Softwareprozessmodelle Scrum, Open Unified Process und V-Modell-XT.
+In Kapitel 2 werden grundlegende Konzepte des Software Engineering vorgestellt, die notwendig sind, um den Inhalt dieser Arbeit zu verstehen. Zunächst wird in Kapitel 2.1 der Begriff Software Engineering definiert und die Ziele, der Prozess und die Prinzipien des Software Engineering werden erläutert. Weiterhin wird in Kapitel 2.2 der Begriff Softwareentwicklungsprozess erklärt. Hierbei werden Softwareprojekttypen sowie schwergewichtige und leichtgewichtige Prozessmodelle beschrieben. Anschließend gibt es eine Einführung in die drei repräsentativen Softwareentwicklungsprozesse Scrum, Open Unified Process und V-Modell-XT.
 
 \section{Software Engineering}\label{sec:chapter2: Software Engineering}
 Heutzutage werden immer mehr Systeme von Software kontrolliert \cite{Puntambekar2007}. Unter Software versteht man laut Duden die "Gesamtheit aller Programme, die auf einem Computer eingesetzt werden können". Das Wort Engineering, welches sich laut Duden von dem lateinischen Wort Ingenium (=[schöpferische] Begabung; Erfindungsgabe) ableitet, wird heutzutage mit Ingenieurwesen, bzw. technische Entwicklung übersetzt. Software Engineering umfasst somit die Gesamtheit der Aktivitäten zur Analyse, Konzeption, Entwicklung und Implementierung einer softwaretechnischen Lösung \cite{Specker1998}.
@@ -42,15 +42,15 @@ Wie Abbildung  \ref{fig:Wuerfel} entnommen werden kann, besteht der Prozess des 
 
 \textit{Modifizierbarkeit} ist das wohl schwierigste Ziel des Software Engineering. Hierbei geht es darum, dass es mitunter notwendig wird, Teile des zu entwickelnden Systems zu ändern, während andere Teile unverändert bleiben, aber dennoch das gewünschte neue Ergebnis erreicht wird. Auf die \textit{Effizienz} der jeweiligen Aktivitäten sollte immer geachtet werden, da dieses Ziel des Software Engineering häufig vernachlässigt wird. Bei dem Ziel \textit{Zuverlässigkeit} geht es darum, einerseits Fehler bei der Konzeption, im Design und der Implementierung zu vermeiden, andererseits muss auch Fehlverhalten bei der Ausführung und der Leistung verhindert werden \cite{ross1975software}.
  
-\section{Softwareprozessmodelle}\label{sec:chapter.2: Softwareprozessmodelle}
+\section{Softwareentwicklungsprozesse}\label{sec:chapter.2: Softwareentwicklungsprozesse}
 
 Für das Verständnis, die Schaffung oder Unternehmung von etwas Großem, fertigen Menschen in der Regel ein vereinfachtes Bild davon an. Hierfür nehmen sie Maß, fertigen eine Skizze oder einen Plan an oder orientieren sich an einem Vorbild, bzw. bauen sich eines. Dies geschieht normalerweise mit Papier und Schreibzeug, anderen Materialien oder einem Computer. Besonders für die Lösung von komplexen wissenschaftlichen Problemen oder bei großen Konstruktionsaufgaben ist dies unumgänglich \cite{Hesse2008}. \newline
 Hierbei stützten sich die Menschen auf Modelle, welche als Stellvertreter für die Sache, die verstanden, geschaffen, unternommen oder betrieben werden soll, angesehen werden kann \cite{Hesse2008}. \newline
-Insbesondere die heutzutage von Softwareentwicklern zu erstellenden Softwareprodukte zeichnen sich durch ein hohes Maß an Komplexität und Umfang aus. Neben den Erwartungen von Kunden hinsichtlich Qualität müssen Softwaresysteme ebenfalls termingerecht und innerhalb eines vorgegebenen Budgetrahmens erstellt werden. Effektive und effiziente Softwareprozessmodelle gewinnen somit immer mehr an Bedeutung \cite{Grechenig2010}.
+Insbesondere die heutzutage von Softwareentwicklern zu erstellenden Softwareprodukte zeichnen sich durch ein hohes Maß an Komplexität und Umfang aus. Neben den Erwartungen von Kunden hinsichtlich Qualität müssen Softwaresysteme ebenfalls termingerecht und innerhalb eines vorgegebenen Budgetrahmens erstellt werden. Effektive und effiziente Softwareentwicklungsprozesse gewinnen somit immer mehr an Bedeutung \cite{Grechenig2010}.
 Modell leitet sich von dem lateinischen Begriff  \glqq modelus\grqq \ 
 ab und kann mit  \glqq Regel, Form, Muster, Vorbild\grqq \ übersetzt werden \cite{Hesse2008}. 
 Der Begriff Prozess stammt von dem lateinischen Wort "processus" ' ab und lässt sich mit "Fortgang oder Verlauf"' übersetzen \cite{koch2011, Staud2006}. \newline 
-Ein Softwareprozess ist eine Abfolge von Schritten, welche zur Herstellung von Software notwendig sind \cite{Mishra2012, Stoerrle2005}. Mit Hilfe eines Softwareprozessmodelles lässt sich der organisatorische Rahmen zur Herstellung von Software beschreiben \cite{Koelmel2000}. Ein Softwareprozessmodell stellt somit ein Modell für die Entwicklung eines Softwaresystems dar \cite{Hanser2010}. Die einzelnen Abschnitte eines Softwareprozesses werden hierbei als Phasen bezeichnet \cite{Stoerrle2005}. Diese werden unterschieden in "Planung des Prozesses", "Spezifikation der Anforderungen an das Produkt", Design des Softwareprodukts", "Implementierung" und "Diverse Tests des Softwareprodukts" (siehe Abbildung \ref{fig:SEProzess}).
+Ein Softwareprozess ist eine Abfolge von Schritten, welche zur Herstellung von Software notwendig sind \cite{Mishra2012, Stoerrle2005}. Mit Hilfe eines Softwareentwicklungsprozesses lässt sich der organisatorische Rahmen zur Herstellung von Software beschreiben \cite{Koelmel2000}. Ein Softwareentwicklungsprozess stellt somit ein Modell für die Entwicklung eines Softwaresystems dar \cite{Hanser2010}. Die einzelnen Abschnitte eines Softwareprozesses werden hierbei als Phasen bezeichnet \cite{Stoerrle2005}. Diese werden unterschieden in "Planung des Prozesses", "Spezifikation der Anforderungen an das Produkt", Design des Softwareprodukts", "Implementierung" und "Diverse Tests des Softwareprodukts" (siehe Abbildung \ref{fig:SEProzess}).
 
 \begin{figure}[htp]
 \begin{center} 
@@ -60,7 +60,7 @@ Ein Softwareprozess ist eine Abfolge von Schritten, welche zur Herstellung von S
 \end{center}
 \end{figure}
 
-In einem Softwareprozessmodell werden nicht nur die durchzuführenden Aktivitäten definiert, sondern auch die Rollen und Qualifikationen der Mitarbeiter, welche die jeweiligen Aktivitäten durchführen sollen, bzw. für diese verantwortlich sind. Des Weiteren werden die während des Entwicklungsprozesses zu erstellenden Dokumente und Unterlagen festgelegt \cite{Hanser2010}.
+In einem Softwareentwicklungsprozess werden nicht nur die durchzuführenden Aktivitäten definiert, sondern auch die Rollen und Qualifikationen der Mitarbeiter, welche die jeweiligen Aktivitäten durchführen sollen, bzw. für diese verantwortlich sind. Des Weiteren werden die während des Entwicklungsprozesses zu erstellenden Dokumente und Unterlagen festgelegt \cite{Hanser2010}.
 
 \subsection{Software-Projekttypen}
 
