--- a/Masterarbeit 4/Tex/chapter3.tex
+++ b/Masterarbeit 4/Tex/chapter3.tex
@@ -116,7 +116,7 @@ In ConDec gibt es die vier verschiedenen Arten von Contraints: \textit{Existence
 \hline
 \textbf{Constraint} & \textbf{Erläuterung}\\
 \hline
-Existence Constraints & Ein-stellige Kardinalitäts-Constraints. Sie geben an, wie oft eine Aktivität ausgeführt werden kann, bzw. muss.\\
+Existenz Constraints & Ein-stellige Kardinalitäts-Constraints. Sie geben an, wie oft eine Aktivität ausgeführt werden kann, bzw. muss.\\
 \hline
 Choice Constraints & N-stellige Constraints. Sie geben die Notwendigkeit der Ausführung von Aktivitäten an, die zu einer Reihe möglicher Alternativen gehören, unabhängig von anderen Constraints. \\
 \hline
