--- a/Masterarbeit 4/Tex/chapter1.tex
+++ b/Masterarbeit 4/Tex/chapter1.tex
@@ -1,10 +1,10 @@
 \chapter{Einleitung}\label{sec:chapter1}
 
-In der heutigen Zeit werden die meisten Systeme von Software kontrolliert \cite{Puntambekar2007}. Diese weisen bei deren Entwicklung oftmals ein hohes Maß an Komplexität und Umfang auf. Sie müssen nicht nur eine hohe Qualität aufweisen, sondern auch in einer vorgegebenen Zeit zu vorgegebenen Kosten fertig gestellt werden \cite{Grechenig2010}. Deshalb muss die Entwicklung von Software systematisch durchgeführt werden \cite{gumm2012einführung}. Aus diesem Grund ist es wichtig, bei der Entwicklung eines Systems einem effizienten Softwareprozessmodell zu folgen, da diese den Entwicklungsprozess strukturieren und dadurch beherrschbar machen, indem sie eine Menge von Aktivitäten vorgeben, welche zur Fertigstellung der Software notwendig sind \cite{richling2011autonomie}. Hierbei werden die grundlegenden Aktivitäten bei der Entwicklung eines Softwaresystems wie Planung, Spezifikation, Design, Implementierung und Test strukturiert \cite{gumm2012einführung, hanser2010}. \newline
+In der heutigen Zeit werden die meisten Systeme von Software kontrolliert \cite{Puntambekar2007}. Diese weisen bei deren Entwicklung oftmals ein hohes Maß an Komplexität und Umfang auf. Sie müssen nicht nur eine hohe Qualität aufweisen, sondern auch in einer vorgegebenen Zeit zu vorgegebenen Kosten fertig gestellt werden \cite{Grechenig2010}. Deshalb muss die Entwicklung von Software systematisch durchgeführt werden \cite{gumm2012einführung}. Aus diesem Grund ist es wichtig, bei der Entwicklung eines Systems einem effizienten Softwareentwicklungsprozess zu folgen, da diese den Entwicklungsprozess strukturieren und dadurch beherrschbar machen, indem sie eine Menge von Aktivitäten vorgeben, welche zur Fertigstellung der Software notwendig sind \cite{richling2011autonomie}. Hierbei werden die grundlegenden Aktivitäten bei der Entwicklung eines Softwaresystems wie Planung, Spezifikation, Design, Implementierung und Test strukturiert \cite{gumm2012einführung, hanser2010}. \newline
 
-Inzwischen existiert eine Reihe verschiedener Softwareprozessmodelle. Diese unterscheiden sich in leichtgewichtige (weniger formal, kaum Dokumentation) und schwergewichtige (sehr formale, dokumentenlastige Vorgehensweise) Prozessmodelle. Scrum ist ein Beispiel für ein leichtgewichtiges Prozessmodell, beim V-Modell XT handelt es sich um ein schwergewichtiges Prozessmodell und der Open Rational Unified Process (Open UP) befindet sich an einer Schnittstelle zwischen schwergewichtigen und leichtgewichtigen Prozessmodellen \cite{Hanser2010}.\newline
+Inzwischen existiert eine Reihe verschiedener Softwareentwicklungsprozesse. Diese unterscheiden sich in leichtgewichtige (weniger formal, kaum Dokumentation) und schwergewichtige (sehr formale, dokumentenlastige Vorgehensweise) Prozessmodelle. Scrum ist ein Beispiel für ein leichtgewichtiges Prozessmodell, beim V-Modell XT handelt es sich um ein schwergewichtiges Prozessmodell und der Open Rational Unified Process (Open UP) befindet sich an einer Schnittstelle zwischen schwergewichtigen und leichtgewichtigen Prozessmodellen \cite{Hanser2010}.\newline
 
-Um Softwareprozessmodelle richtig anzuwenden, müssen diese auch verstanden werden. Eine rein textuelle Beschreibung derselbigen ist oftmals sehr umfangreich (z.B. ist die Dokumentation des V-Modell XT mehr als 900 Seiten lang). Daher sollten diese in einer vereinfachten Art dargestellt werden. Hierfür bieten sich Prozessmodellierungssprachen an, da diese einerseits eine gewisse formale Exaktheit aufweisen und andererseits oftmals auch intuitiv verständlich sind \cite{thomas2009,kircher2006}. \newline
+Um Softwareentwicklungsprozesse richtig anzuwenden, müssen diese auch verstanden werden. Eine rein textuelle Beschreibung derselbigen ist oftmals sehr umfangreich (z.B. ist die Dokumentation des V-Modell XT mehr als 900 Seiten lang). Daher sollten diese in einer vereinfachten Art dargestellt werden. Hierfür bieten sich Prozessmodellierungssprachen an, da diese einerseits eine gewisse formale Exaktheit aufweisen und andererseits oftmals auch intuitiv verständlich sind \cite{thomas2009,kircher2006}. \newline
 
 \section{Motivation}
 
@@ -14,7 +14,7 @@ Heutzutage existiert eine Vielzahl unterschiedlicher Prozessmodellierungssprache
 
 Es gibt bereits Arbeiten und Studien, welche sich mit dem Vergleich von imperativen und deklarativen Prozessmodellierungssprachen beschäftigen. Jedoch gibt es noch kaum Arbeiten, welche sich intensiv mit dem Vergleich der Anwendbarkeit der beiden Prozessmodellierungssprachen bei der Modellierung beschäftigen.\newline
 
-Aus diesem Grund wird die Anwendbarkeit von imperativen und deklarativen Prozessmodellierungsansätzen in dieser Arbeit im Kontext von Softwareprozessmodellen eingehend untersucht werden. Hierfür werden Teile der Softwareprozessmodelle Scrum, Open UP und V-Modell XT sowohl in imperativer als auch in deklarativer Prozessmodellierungssprache modelliert und anschließend wird deren Anwendbarkeit in diesem Kontext analysiert und diskutiert.\newline
+Aus diesem Grund wird die Anwendbarkeit von imperativen und deklarativen Prozessmodellierungsansätzen in dieser Arbeit im Kontext von Softwareentwicklungsprozessen eingehend untersucht werden. Hierfür werden Teile der Softwareentwicklungsprozesse Scrum, Open UP und V-Modell XT sowohl in imperativer als auch in deklarativer Prozessmodellierungssprache modelliert und anschließend wird deren Anwendbarkeit in diesem Kontext analysiert und diskutiert.\newline
 
 .
 
@@ -22,9 +22,9 @@ Aus diesem Grund wird die Anwendbarkeit von imperativen und deklarativen Prozess
 \section{Zielstellung}
 Die vorliegende Arbeit verfolgt mehrere Ziele. Einerseits soll dem Leser der vorliegenden Arbeit ein grundlegendes Wissen über Software Engineering und Softwareentwicklungsmodelle vermittelt werden. Weiterhin sollen ihm auch grundlegende Kenntnisse in den Bereichen Prozessmodellierung und Prozessmodellierungssprachen, insbesondere imperative und deklarative Prozessmodellierungssprachen beigebracht werden. \newline
 
-Zudem soll ein Einführung des Lesers in die Softwareprozessmodelle Scrum, Open UP und V-Modell XT erfolgen. Ein weiteres Ziel ist es hier, diese drei Modelle zu analysieren und somit für die nachfolgende Modellierung aufzubereiten.\newline
+Zudem soll ein Einführung des Lesers in die Softwareentwicklungsprozesse Scrum, Open UP und V-Modell XT erfolgen. Ein weiteres Ziel ist es hier, diese drei Modelle zu analysieren und somit für die nachfolgende Modellierung aufzubereiten.\newline
 
-Das nächste Ziel dieser Arbeit ist es sodann, Teile der Softwareprozessmodelle Scrum, Open UP und V-Modell XT in der imperativen Prozessmodellierungssprache BPMN und in der deklarativen Prozessmodellierungssprache ConDec zu modellieren. Hierdurch wird der Grundstein für den nachfolgenden Vergleich dieser Modelle gelegt.\newline
+Das nächste Ziel dieser Arbeit ist es sodann, Teile der Softwareentwicklungsprozesse Scrum, Open UP und V-Modell XT in der imperativen Prozessmodellierungssprache BPMN und in der deklarativen Prozessmodellierungssprache ConDec zu modellieren. Hierdurch wird der Grundstein für den nachfolgenden Vergleich dieser Modelle gelegt.\newline
 
 Das Hauptziel dieser Arbeit ist sodann der Vergleich der Anwendbarkeit der deklarativen und imperativen Prozessmodellierungssprachen. Hierfür werden die zuvor erstellten Modelle genauestens analysiert und die beiden Prozessmodellierungssprachen BPMN und ConDec werden dann bezüglich ihrer Eignung zum Modellieren verglichen.\newline
 
